--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -44,7 +44,7 @@
             </li>
             <li>
               <h2>Flexible Tutoring</h2>
-              <p>Start with just 1 hour or plan an entire program. Let's get that score up!</p>
+              <p>Start with just 30 minutes or plan an entire program. Let's get that score up!</p>
             </li>
             <li>
               <h2>Learn from the Best</h2>
