--- a/public/why.html
+++ b/public/why.html
@@ -73,17 +73,13 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
-          <!-- <li><a href="index.html">Home</a></li> -->
+          <li><a href="free-test-taker.html" onclick="createAnalyticsEvent({eventID: 'navFreeClicked'})">Free Practice</a></li>
           <li><a href="#">Why Lyrn</a></li>
-          <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li>
+          <!-- <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li> -->
           <li><a href="pricing.html" onclick="createAnalyticsEvent({eventID: 'navPricingClicked'})">Pricing</a></li>
-          <!-- <li><a href="sign-in.html">Sign In</a></li> -->
-          <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
-          <!-- <li><a href="enroll.html">Enroll</a></li> -->
+          <li><div class="phone"><a href="sign-in.html">Sign in</a></div></li>
         </ul>
       </nav>
-      <!-- <div class="phone" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div> -->
-      <div class="phone"><a href="sign-in.html">Sign in</a></div>
     </header>
 
     <!-- start banner -->
@@ -145,7 +141,7 @@
           </div>
           <div class="why-card">
             <h3>Simple Process</h3>
-            <p> <a href="pricing.html">Get started</a> as soon as tomorrow.</p>
+            <p> <a href="pricing.html">Get started</a> as soon as today.</p>
           </div>
           <div class="why-card">
             <h3>Transparent Pricing</h3>
