--- a/public/pricing.html
+++ b/public/pricing.html
@@ -94,8 +94,9 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
+          <li><a href="free-test-taker.html" onclick="createAnalyticsEvent({eventID: 'navFreeClicked'})">Free Practice</a></li>
           <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked'})">Why Lyrn</a></li>
-          <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li>
+          <!-- <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li> -->
           <li><a href="#">Pricing</a></li>
           <li><div class="phone"><a href="sign-in.html">Sign in</a></div></li>
         </ul>
@@ -167,7 +168,7 @@
 
             <input type="radio" name="program-selection" id="self" onclick=openProgram(event)>
             <label for="self">Self Guided</label>
-            <p>Affordable option for raising your score in the least amount of time.</p>
+            <p>We'll help you with the specific questions you struggle with.</p>
 
             <input type="radio" name="program-selection" id="one-on-one" onclick=openProgram(event)>
             <label for="one-on-one">One-on-One</label>
@@ -226,7 +227,8 @@
                 <h5>Tutors will help you with whatever questions you have</h5>
               </div>
               <ul>
-                <li>All tutors have scored in the <strong>perfect scores</strong> (36)</li>
+                <li>All tutors have scored <strong>perfect scores</strong> (36)</li>
+                <li>Great for going over questions from our test taker</li>
                 <li>Sessions are led by you</li>
                 <li>Tutors are experts on ACT topics</li>
               </ul>
@@ -262,7 +264,7 @@
               </div>
               <ul>
                 <li><strong>One-on-One</strong> Personalized Tutoring</li>
-                <li>All tutors have scored in the <strong>perfect scores</strong> (36)</li>
+                <li>All tutors have scored <strong>perfect scores</strong> (36)</li>
                 <li>Adaptive Learning Intelligence</li>
                 <li><strong>2000+</strong> ACT test questions</li>
                 <li>Full length ACT practice tests</li>
