--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -127,12 +127,19 @@
         <p class="feedback" onclick="openFeedback()">Feedback</p>
         <div class="tutorial-bubble" onclick="openTutorial()">?</div>
       </div>
+
       <div class="next-lesson-wrapper box">
         <h2 id="nextLessonDetails"></h2>
       </div>
-      <div>
+
+      <div class="full-assignment-wrapper">
+        <h3>Full Tests</h3>
+        <div id="fullAssignments" class="assignment-wrapper"></div>
+      </div>
+
+      <div class="current-assignment-wrapper">
         <h3>Current Assignments</h3>
-        <div class="assignment box default-background" id="noCurrentAssignments">Hurray no assignments!</div>
+        <!-- <div class="assignment box default-background" id="noCurrentAssignments">Hurray no assignments!</div> -->
         <div>
           <!-- <div id="startedAssignments"></div> -->
           <div id="newAssignments" class="assignment-wrapper">
@@ -151,9 +158,10 @@
           </div>
         </div>
       </div>
-      <div>
+
+      <div class="previous-assignment-wrapper">
         <h3>Previous Assignments</h3>
-        <div class="assignment box default-background" id="noPreviousAssignments">No previous assignments.</div>
+        <!-- <div class="assignment box default-background" id="noPreviousAssignments">No previous assignments.</div> -->
         <div id="previousAssignments" class="assignment-wrapper">
           <div class="english-container">
             <h4>English</h4>
@@ -169,6 +177,7 @@
           </div>
         </div>
       </div>
+
     </div>
   </section>
 
