--- a/public/index.html
+++ b/public/index.html
@@ -253,14 +253,13 @@
 
       <section class="questionnaire" id="questionnaireSection">
         <div class="progress">
-          <p><span id="progress_number">1</span> out of 6</p>
+          <p><span id="progress_number">1</span> out of 3</p>
           <div class="bar-wrapper">
             <div class="bar-fill" style="width: 12.5%;" id="progress_fill"></div>
           </div>
         </div>
         <div class="panel open">
-          <h2>Get started with a personalized program</h2>
-          <p>Tell us a little about your needs.</p>
+          <h2>Tell us a little about your needs.</h2>
           <div class="question" id="question_0">
             <h3 class="text">I am a...</h3>
             <button class="option" onclick="goForwardToQuestion(1, 'student')">Student</button>
@@ -271,67 +270,69 @@
         <div class="panel">
           <div class="question" id="question_1">
             <h3 class="text">I'm looking for...</h3>
-            <button class="option" onclick="goForwardToQuestion(2, 'act')">ACT Prep</button>
-            <button class="option" onclick="goForwardToQuestion(6, 'subject tutoring')">Subject Tutoring</button>
+            <button class="option" onclick="goForwardToQuestion(2, 'free')">Free ACT Practice</button>
+            <button class="option" onclick="goForwardToQuestion(3, 'act')">Personalized ACT Tutoring</button>
+            <button class="option" onclick="goForwardToQuestion(3, 'homework help')">Homework Help</button>
           </div>
           <button class="back" onclick="goBackAQuestion()">Back</button>
         </div>
 
         <div class="panel">
           <div class="question" id="question_2">
-            <h3 class="text">What kind of ACT Prep are you interested in?</h3>
-            <button class="option" onclick="goForwardToQuestion(3, '1-on-1')">1-on-1</button>
-            <button class="option" onclick="goForwardToQuestion(4, 'classes')">Group Classes</button>
-            <button class="option" onclick="goForwardToQuestion(4, 'free')">Free Resources</button>
+            <h3 class="text">Sign up right now to get access to our test taker</h3>
+            <h5>You can take 3 full length ACT tests broken down into section.</h5>
+            <a href="sign-up.html" style="width: 100%;"><button class="option">Sign Up Now</button></a>
           </div>
           <button class="back" onclick="goBackAQuestion()">Back</button>
         </div>
 
         <div class="panel">
           <div class="question" id="question_3">
-            <h3 class="text">How many points would you like to go up on the ACT?</h3>
-            <button class="option" onclick="goForwardToQuestion(5, '2')">2</button>
-            <button class="option" onclick="goForwardToQuestion(5, '3')">3</button>
-            <button class="option" onclick="goForwardToQuestion(5, '4+')">4+</button>
-          </div>
-          <button class="back" onclick="goBackAQuestion()">Back</button>
-        </div>
-
-        <div class="panel">
-          <div class="question" id="question_4">
-            <h3 class="text">Which sections of the test would you like to work on?</h3>
-            <p>Select all that apply</p>
-            <div class="input-row">
-              <input type="checkbox" id="act_class_english" value="english">
-              <label for="act_class_english">English</label>
-            </div>
-            <div class="input-row">
-              <input type="checkbox" id="act_class_math" value="math">
-              <label for="act_class_math">Math</label>
-            </div>
-            <div class="input-row">
-              <input type="checkbox" id="act_class_reading" value="reading">
-              <label for="act_class_reading">Reading</label>
-            </div>
-            <div class="input-row">
-              <input type="checkbox" id="act_class_science" value="science">
-              <label for="act_class_science">Science</label>
-            </div>
-            <button class="option" onclick="goForwardToQuestion(5, getAllCheckboxesFromQuestion())">Continue</button>
-          </div>
-          <button class="back" onclick="goBackAQuestion()">Back</button>
-        </div>
-
-        <div class="panel">
-          <div class="question" id="question_5">
-            <h3 class="text">We'll send you a personalized program based on what you need the most.</h3>
+            <h3 class="text">Let's talk a little more about your needs before starting.</h3>
+            <h5>What is the best time to give you a call?</h5>
             <div class="input-column">
               <label for="questionnaire_name">Full Name</label>
               <input type="text" id="questionnaire_name">
             </div>
             <div class="input-column">
-              <label for="questionnaire_email">Email</label>
-              <input type="email" id="questionnaire_email">
+              <label for="questionnaire_phone">Phone Number</label>
+              <input type="tel" id="questionnaire_phone">
+            </div>
+            <div class="input-column">
+              <label for="questionnaire_day">Day</label>
+              <div class="week-container">
+                <input type="radio" id="mon" name="dayOfWeek" value="Monday" checked>
+                <label for="mon">Mon</label>
+
+                <input type="radio" id="tue" name="dayOfWeek" value="Tuesday">
+                <label for="tue">Tue</label>
+
+                <input type="radio" id="wed" name="dayOfWeek" value="Wednesday">
+                <label for="wed">Wed</label>
+
+                <input type="radio" id="thu" name="dayOfWeek" value="Thursday">
+                <label for="thu">Thu</label>
+
+                <input type="radio" id="fri" name="dayOfWeek" value="Friday">
+                <label for="fri">Fri</label>
+              </div>
+            </div>
+            <div class="input-column">
+              <label for="questionnaire_time">Time</label>
+              <select id="questionnaire_time">
+                <option value="15:00">3:00 P.M.</option>
+                <option value="15:30">3:30 P.M.</option>
+                <option value="16:00">4:00 P.M.</option>
+                <option value="16:30">4:30 P.M.</option>
+                <option value="17:00">5:00 P.M.</option>
+                <option value="17:30">5:30 P.M.</option>
+                <option value="18:00">6:00 P.M.</option>
+                <option value="18:30">6:30 P.M.</option>
+                <option value="19:00">7:00 P.M.</option>
+                <option value="19:30">7:30 P.M.</option>
+                <option value="20:00">8:00 P.M.</option>
+                <option value="20:30">8:30 P.M.</option>
+              </select>
             </div>
             <p class="error" id="questionnaire_error"></p>
             <button class="option submit" onclick="submitQuestionnaire(); gtag_report_conversion_resources()" id="questionnaire_submit">Submit</button>
@@ -340,33 +341,9 @@
         </div>
 
         <div class="panel">
-          <div class="question" id="question_6">
-            <h3 class="text">What do you need help with?</h3>
-            <button class="option" onclick="goForwardToQuestion(7, 'struggle')">Improving in a class</button>
-            <button class="option" onclick="goForwardToQuestion(7, 'test')">Preparing for a test</button>
-            <button class="option" onclick="goForwardToQuestion(7, 'assignment')">Working on a few assignments</button>
-          </div>
-          <button class="back" onclick="goBackAQuestion()">Back</button>
-        </div>
-
-        <div class="panel">
-          <div class="question" id="question_7">
-            <h3 class="text">What subject do you need help with?</h3>
-            <div class="grid">
-              <button class="option" onclick="goForwardToQuestion(5, 'math')">Math</button>
-              <button class="option" onclick="goForwardToQuestion(5, 'science')">Science</button>
-              <button class="option" onclick="goForwardToQuestion(5, 'english')">English</button>
-              <button class="option" onclick="goForwardToQuestion(5, 'history')">History</button>
-              <button class="option" onclick="goForwardToQuestion(5, 'other')">Other</button>
-            </div>
-          </div>
-          <button class="back" onclick="goBackAQuestion()">Back</button>
-        </div>
-
-        <div class="panel">
           <div class="question" id="question_8">
-            <h3 class="text">We are working on your personalized program and will send it to you as soon as we can.</h3>
-            <h3>In the mean time, you can check out our other programs by visting our <a href="pricing.html" onclick="createAnalyticsEvent({eventID: 'questionnairePricingClicked'})">pricing page</a>.</h3>
+            <h3 class="text">We will give you a call at your requested time as soon as we can.</h3>
+            <h3>In the mean time, you can check out all of our programs by visting our <a href="pricing.html" onclick="createAnalyticsEvent({eventID: 'questionnairePricingClicked'})">pricing page</a>.</h3>
           </div>
           <button class="back" onclick="resetQuestionnaire()">Start Over</button>
         </div>
