ready to start back up

--- a/public/pricing-old.html
+++ b/public/pricing-old.html
@@ -74,7 +74,7 @@
     height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!-- End Google Tag Manager (noscript) -->
     <header class="nav-start">
-      <a href="index.html" onclick="createAnalyticsEvent({eventID: 'navHomeClicked'})" class="logo">
+      <a href="index.html" class="logo">
         <svg class="logo" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="303 440 496 225" style="enable-background:new 0 0 1080 1080;" xml:space="preserve">
           <g>
             <polygon points="306.24,508.83 306.24,625.38 428.17,612.83 428.17,569.79 351.96,578.76 354.65,457.72 345.26,457.72 "/>
@@ -94,17 +94,13 @@
       <input type="checkbox" id="nav-toggle" class="nav-toggle">
       <nav>
         <ul>
-          <!-- <li><a href="index.html">Home</a></li> -->
+          <li><a href="free-test-taker.html" onclick="createAnalyticsEvent({eventID: 'navFreeClicked'})">Free Practice</a></li>
           <li><a href="why.html" onclick="createAnalyticsEvent({eventID: 'navWhyClicked'})">Why Lyrn</a></li>
-          <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li>
-          <li><a href="#">Pricing</a></li>
-          <!-- <li><a href="sign-in.html">Sign In</a></li> -->
-          <!-- <li><a class="enroll" href="enroll.html">Get Started</a></li> -->
-          <!-- <li><a href="enroll.html">Enroll</a></li> -->
+          <!-- <li><a href="team.html" onclick="createAnalyticsEvent({eventID: 'navTeamClicked'})">Our Team</a></li> -->
+          <li><a href="#" onclick="createAnalyticsEvent({eventID: 'navPricingClicked'})">Pricing</a></li>
+          <li><div class="phone"><a href="sign-in.html">Sign in</a></div></li>
         </ul>
       </nav>
-      <!-- <div class="phone" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})"><a href="tel:+13853000906"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="#000"><path d="M0 0h24v24H0z" fill="none"></path><path d="M6.62 10.79c1.44 2.83 3.76 5.14 6.59 6.59l2.2-2.2c.27-.27.67-.36 1.02-.24 1.12.37 2.33.57 3.57.57.55 0 1 .45 1 1V20c0 .55-.45 1-1 1-9.39 0-17-7.61-17-17 0-.55.45-1 1-1h3.5c.55 0 1 .45 1 1 0 1.25.2 2.45.57 3.57.11.35.03.74-.25 1.02l-2.2 2.2z"></path></svg> Call Now (385) 300-0906</a></div> -->
-      <div class="phone"><a href="sign-in.html">Sign in</a></div>
     </header>
 
     <!-- start banner -->
@@ -342,9 +338,9 @@
               </div>
               <h4 class="start">GET STARTED TODAY!</h4>
               <button class="select" onclick="createAnalyticsEvent({eventID: 'crashCourseCallClicked'}); gtag_report_conversion_preview()">
-                <a href="tel:+13853000906">
+                <a href="tel:+13852817215">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -564,9 +560,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -603,9 +599,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -642,9 +638,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -681,9 +677,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -825,9 +821,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -865,9 +861,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -1005,9 +1001,9 @@
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13852817215">
                   <p>CALL OR TEXT</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </div>
             </div> -->
@@ -1044,9 +1040,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -1083,9 +1079,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -1122,9 +1118,9 @@
                 <p>Check Availability</p>
               </button> -->
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to sign up</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
             </div>
@@ -1140,9 +1136,9 @@
             </div>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+              <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                 <p>CALL OR TEXT</p>
-                <p>(385) 300-0906</p>
+                <p>(385) 281-7215</p>
               </a>
             </div>
           </div>
@@ -1279,9 +1275,9 @@
             </ul>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+              <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                 <p>CALL OR TEXT</p>
-                <p>(385) 300-0906</p>
+                <p>(385) 281-7215</p>
               </a>
             </div>
           </div>
@@ -1331,7 +1327,7 @@
           <h3>Contact Us</h3>
           <ul>
             <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
-            <li><a href="tel:+13853000906">(385) 300-0906</a></li>
+            <li><a href="tel:+13852817215">(385) 281-7215</a></li>
           </ul>
         </div>
       </div>
