--- a/public/sign-up.html
+++ b/public/sign-up.html
@@ -40,15 +40,15 @@
           <ul class="info">
             <li>
               <h2>Free Resources</h2>
-              <p>Every new user gets 3 full length ACT tests on our custom test taker.</p>
-            </li>
-            <li>
-              <h2>Flexible Tutoring</h2>
-              <p>Start with just 30 minutes or plan an entire program. Let's get that score up!</p>
+              <p>Every new student gets 3 full length ACT tests on our custom test taker.</p>
             </li>
             <li>
               <h2>Learn from the Best</h2>
               <p>We have thousands of hours of ACT prep experience.</p>
+            </li>
+            <li>
+              <h2>Personalized Tutoring</h2>
+              <p>All of our programs are one on one to best meet your needs.</p>
             </li>
           </ul>
         </div>
