--- a/public/why.html
+++ b/public/why.html
@@ -103,7 +103,7 @@
       </div>
     </div>
 
-    <div class="banner active" id="lessonSeries_banner">
+    <div class="banner" id="lessonSeries_banner">
       <p>Get started with <strong>12 free</strong> ACT lessons. Click for details.</p>
     </div>
     <div class="modal" id="lessonSeries_modal">
@@ -140,8 +140,8 @@
             <p>We provide a <a href="#content">modern</a> approach to learning.</p>
           </div>
           <div class="why-card">
-            <h3>Simple Process</h3>
-            <p> <a href="pricing.html">Get started</a> as soon as today.</p>
+            <h3>Affordable Options</h3>
+            <p> <a href="sign-up.html">Get started</a> with 3 free practice tests.</p>
           </div>
           <div class="why-card">
             <h3>Transparent Pricing</h3>
@@ -161,7 +161,7 @@
         </p>
         <p>
           <strong>Adaptive Learning Intelligence.</strong> We track every question your student answers in our programs; every test they take, every worksheet they complete,
-          every lesson we cover will be saved and will affect every step your student takes through our truly custom programs. This is why we have spent thousands of hours developing 
+          every lesson we cover will be saved and will affect every step your student takes through our truly custom programs. This is why we have spent hundreds of hours developing 
           state-of-the-art software to help your student succeed. The only way to enter the future of education is to use the tools of the future. Our tutors have this technology at 
           their finger tips, and they are eager to help your student reach their dreams.
         </p>
@@ -242,7 +242,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="#">Why Lyrn</a></li>
-            <li><a href="team.html">Our Team</a></li>
+            <!-- <li><a href="team.html">Our Team</a></li> -->
             <li><a href="pricing.html">Pricing</a></li>
             <!-- <li><a href="enroll.html">Contact Us</a></li> -->
             <!-- <li><a href="sign-up.html">Sign up</a></li> -->
@@ -261,7 +261,7 @@
           <h3>Contact Us</h3>
           <ul>
             <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
-            <li><a href="tel:+13853000906">(385) 300-0906</a></li>
+            <li><a href="tel:+13852817215">(385) 281-7215</a></li>
           </ul>
         </div>
       </div>
