--- a/public/pricing.html
+++ b/public/pricing.html
@@ -124,7 +124,7 @@
       </div>
     </div>
 
-    <div class="banner active" id="lessonSeries_banner">
+    <div class="banner" id="lessonSeries_banner">
       <p>Get started with <strong>12 free</strong> ACT lessons. Click for details.</p>
     </div>
     <div class="modal" id="lessonSeries_modal">
@@ -170,9 +170,9 @@
             <label for="one-on-one">ACT Programs</label>
             <p>The best way to prepare for the ACT is one-on-one with our tutors.</p>
 
-            <input type="radio" name="program-selection" id="homework" onclick=openProgram(event)>
+            <!-- <input type="radio" name="program-selection" id="homework" onclick=openProgram(event)>
             <label for="homework">Homework Help</label>
-            <p>Work with a tutor on your most difficult classes.</p>
+            <p>Work with a tutor on your most difficult classes.</p> -->
 
           </div>
         </div>
@@ -209,7 +209,7 @@
               </button>
             </div>
 
-            <div class="plan-wrapper">
+            <!-- <div class="plan-wrapper">
               <div class="title">
                 <h3>Test Review</h3>
                 <h4>$25 per half hour</h4>
@@ -227,156 +227,217 @@
               </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <button class="select">
-                <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                   <p>Call to learn more</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
 
         <!-- one-on-one -->
         <div class="program one-on-one">
           <h2>Get the score you deserve</h2>
-          <h4>One on one help personalized just for you</h4>
+          <p>
+            All of our programs are one on one with an experienced tutor so that you're getting the personalized program that will maximize your score. 
+            Practice with over 2000 real ACT questions during lessons and with daily homework assignments meant to reinforce every topic.
+          </p>
+          <div class="plan-benefits">
+            <ul>
+              <li><strong>One-on-One</strong> Personalized Tutoring</li>
+              <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
+              <li><strong>2000+</strong> ACT test questions</li>
+              <li>Data driven approach</li>
+              <li>Start as soon as next week</li>
+            </ul>
+            <ul>
+              <li>Flexible scheduling</li>
+              <li>Topic based practice in session</li>
+              <li>Homework to solidify concepts</li>
+              <li>Time management skills</li>
+              <li>Test tips and strategies</li>
+            </ul>
+          </div>
 
           <div class="plans">
             <!-- 2 weeks -->
             <div class="plan-wrapper">
               <div class="title">
-                <h3>1 point</h3>
-                <h4>$600</h4>
+                <h3>2 Weeks</h3>
+                <h4>$500</h4>
               </div>
               <div class="length">
                 <h4>Guided Program</h4>
                 <h5>8 hours</h5>
               </div>
-              <ul>
-                <li><strong>One-on-One</strong> Personalized Tutoring</li>
-                <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
-                <li>Adaptive Learning Intelligence</li>
-                <li><strong>2000+</strong> ACT test questions</li>
-                <li>Start as soon as next week</li>
-                <li>Topic based practice in session</li>
-                <li>Homework to solidfy concepts</li>
-                <li>Time management skills</li>
-                <li>Test tips and strategies</li>
-              </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13852817215">
                   <p>Call to learn more</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </div>
             </div>
 
             <!-- 4 weeks -->
-            <div class="plan-wrapper">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $100">
               <div class="title">
-                <h3>2 point</h3>
-                <h4>$1100</h4>
+                <h3>4 Weeks</h3>
+                <h4>$900</h4>
               </div>
               <div class="length">
                 <h4>Guided Program</h4>
                 <h5>16 hours</h5>
               </div>
-              <ul>
-                <li><strong>One-on-One</strong> Personalized Tutoring</li>
-                <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
-                <li>Adaptive Learning Intelligence</li>
-                <li><strong>2000+</strong> ACT test questions</li>
-                <li>Start as soon as next week</li>
-                <li>Topic based practice in session</li>
-                <li>Homework to solidfy concepts</li>
-                <li>Time management skills</li>
-                <li>Test tips and strategies</li>
-              </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13852817215">
                   <p>Call to learn more</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </div>
             </div>
 
             <!-- 6 weeks -->
-            <div class="plan-wrapper">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $300">
               <div class="title">
-                <h3>3 point</h3>
-                <h4>$1500</h4>
+                <h3>6 Weeks</h3>
+                <h4>$1200</h4>
               </div>
               <div class="length">
                 <h4>Guided Program</h4>
                 <h5>24 hours</h5>
               </div>
-              <ul>
-                <li><strong>One-on-One</strong> Personalized Tutoring</li>
-                <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
-                <li>Adaptive Learning Intelligence</li>
-                <li><strong>2000+</strong> ACT test questions</li>
-                <li>Start as soon as next week</li>
-                <li>Topic based practice in session</li>
-                <li>Homework to solidfy concepts</li>
-                <li>Time management skills</li>
-                <li>Test tips and strategies</li>
-              </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13852817215">
                   <p>Call to learn more</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </div>
             </div>
 
             <!-- 8 weeks -->
-            <div class="plan-wrapper">
+            <div class="plan-wrapper coming-soon" data-comingSoon="Save $600">
               <div class="title">
-                <h3>4+ point</h3>
-                <h4>$1800</h4>
+                <h3>8 weeks</h3>
+                <h4>$1400</h4>
               </div>
               <div class="length">
                 <h4>Guided Program</h4>
                 <h5>32 hours</h5>
               </div>
-              <ul>
-                <li><strong>One-on-One</strong> Personalized Tutoring</li>
-                <li>All tutors have scored in the <strong>top 1%</strong> (34+)</li>
-                <li>Adaptive Learning Intelligence</li>
-                <li><strong>2000+</strong> ACT test questions</li>
-                <li>Start as soon as next week</li>
-                <li>Topic based practice in session</li>
-                <li>Homework to solidfy concepts</li>
-                <li>Time management skills</li>
-                <li>Test tips and strategies</li>
-              </ul>
               <h4 class="start">GET STARTED TODAY!</h4>
               <div class="select">
-                <a href="tel:+13853000906">
+                <a href="tel:+13852817215">
                   <p>Call to learn more</p>
-                  <p>(385) 300-0906</p>
+                  <p>(385) 281-7215</p>
                 </a>
               </div>
             </div>
             
           </div>
 
+          <div class="faq">
+            <h2 class="title">FAQ</h2>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_0_act" class="faq_toggle">
+              <label for="faq_0_act" class="summary"><h3>When do the programs start?</h3></label>
+              <div class="content">
+                <p>
+                  We can start your program as soon as next week. Not ready to start right now? Give us a call so that we can make sure you are first in line when you're ready.
+                  We'll give you a call the week before you would like to start to make sure you can get the time you want before anyone else.
+                </p>
+              </div>
+            </div>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_1_act" class="faq_toggle">
+              <label for="faq_1_act" class="summary"><h3>How long are the programs?</h3></label>
+              <div class="content">
+                <p>
+                  We currently offer 4 options for programs: 2, 4, 6, and 8 week programs. This is made up of 4, 8, 12, and 16 lessons respectively where every 4 lessons we cover the
+                  four sections of the ACT: English, Math, Reading, and Science.
+                </p>
+              </div>
+            </div>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_6_act" class="faq_toggle">
+              <label for="faq_6_act" class="summary"><h3>What does a lesson look like?</h3></label>
+              <div class="content">
+                <p>
+                  Every lessons starts off with reviewing the student's homework. You'll be given homework to do the day after and a week after the lesson to really
+                  solidiy those concepts. We'll then teach you the topic that will make the most difference to your ACT score based on how you have been doing in your assignments
+                  as well as how frequently the topic appears on the test. After this we'll make sure to practice the topcis we covered by working through real ACT questions.
+                </p>
+              </div>
+            </div>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_2_act" class="faq_toggle">
+              <label for="faq_2_act" class="summary"><h3>How long are the lessons?</h3></label>
+              <div class="content">
+                <p>
+                  Lessons are 2 hours long. This gives us time to review what we learned last time as well as go over homework, learn the topics that will make the most difference to 
+                  your score, and practice the topics we just covered with real ACT questions. 
+                </p>
+              </div>
+            </div>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_3_act" class="faq_toggle">
+              <label for="faq_3_act" class="summary"><h3>How often are the lessons?</h3></label>
+              <div class="content">
+                <p>
+                  Lessons happen twice a week so that your student has enough time to do their homework and not enough
+                  time to forget everything between sessions. We have a Monday Wednesday block and a Tuesday Thursday block you can choose from. Any time slot we have available on these
+                  two days we can schedule your lessons. For example, your lessons can be Monday and Wednesday from 5-7 PM.
+                </p>
+              </div>
+            </div>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_4_act" class="faq_toggle">
+              <label for="faq_4_act" class="summary"><h3>Group class or 1-on-1 tutoring?</h3></label>
+              <div class="content">
+                <p>
+                  All of our ACT programs are one-on-one. This guarantees that your tutor is giving you their full attention and every question you have can be answered.
+                </p>
+              </div>
+            </div>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_5_act" class="faq_toggle">
+              <label for="faq_5_act" class="summary"><h3>Where are the lessons held?</h3></label>
+              <div class="content">
+                <p>
+                  All of our lessons are online. This along with our proprietary software allows for the most convienient
+                  and state-of-the-art lessons.
+                </p>
+              </div>
+            </div>
+            <div class="details">
+              <input type="checkbox" name="faq" id="faq_7_act" class="faq_toggle">
+              <label for="faq_7_act" class="summary"><h3>What if the program doesn't work for me?</h3></label>
+              <div class="content">
+                <p>
+                  We also offer completely customized programs if the schedule does not work for you or you want to focus more heavily on one section of the test and not others.
+                  If you have some questions about how we can personalize our programs even more, give us a call so we can help you to the best of our abilities.
+                  See below for our custom program pricing.
+                </p>
+              </div>
+            </div>
+          </div>
+
           <div class="plan-wrapper custom">
             <div class="title">
               <h3>Customized programs</h3>
-              <h4>$90 per hour</h4>
+              <h4>$75 per hour</h4>
             </div>
             <div class="length">
               <h5>Create a completely customized program to meet your student's needs.</h5>
             </div>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+              <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                 <p>Call to learn more</p>
-                <p>(385) 300-0906</p>
+                <p>(385) 281-7215</p>
               </a>
             </div>
           </div>
@@ -408,9 +469,9 @@
               <h4 class="start">GET STARTED TODAY!</h4>
               <button class="select">
                 <div class="select">
-                  <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+                  <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                     <p>Call to learn more</p>
-                    <p>(385) 300-0906</p>
+                    <p>(385) 281-7215</p>
                   </a>
                 </div>
               </button>
@@ -453,9 +514,9 @@
             </ul>
             <h4 class="start">GET STARTED TODAY!</h4>
             <div class="select">
-              <a href="tel:+13853000906" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
+              <a href="tel:+13852817215" onclick="createAnalyticsEvent({eventID: 'phoneClicked'})">
                 <p>CALL OR TEXT</p>
-                <p>(385) 300-0906</p>
+                <p>(385) 281-7215</p>
               </a>
             </div>
           </div>
@@ -486,7 +547,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="why.html">Why Lyrn</a></li>
-            <li><a href="team.html">Our Team</a></li>
+            <!-- <li><a href="team.html">Our Team</a></li> -->
             <li><a href="#">Pricing</a></li>
             <!-- <li><a href="enroll.html">Contact Us</a></li> -->
             <!-- <li><a href="sign-up.html">Sign up</a></li> -->
@@ -505,7 +566,7 @@
           <h3>Contact Us</h3>
           <ul>
             <li><a href="mailto:contact@lyrnwithus.com">contact@lyrnwithus.com</a></li>
-            <li><a href="tel:+13853000906">(385) 300-0906</a></li>
+            <li><a href="tel:+13852817215">(385) 281-7215</a></li>
           </ul>
         </div>
       </div>
