--- a/public/test-taker.html
+++ b/public/test-taker.html
@@ -56,6 +56,7 @@
   <script src="../ACT-Question.js"></script>
   <script src="../ACT-Assignment-Timeline.js"></script>
   <script src="../ACT-Assignment.js"></script>
+  <script src="../test-taker-tutorial.js"></script>
   <script src="../test-taker-2.js" defer></script>
 
 </head>
