some more tweaks

--- a/public/free-test-taker.html
+++ b/public/free-test-taker.html
@@ -42,10 +42,10 @@
     <section id="heading">
       <h1>Not Sure What to Expect From the ACT?</h1>
       <h2>
-        Get a better look at the at the ACT by trying it out for yourself! Get 3 free ACT tests today with instant results.
+        Get a better look at the at the ACT by trying it out for yourself! Get 2 free ACT tests today with instant results.
         No paywall, No hassle, just find out exactly what you need to study to get a higher score!
       </h2>
-      <button><a href="sign-up.html">Get 3 Free Tests!</a></button>
+      <button><a href="sign-up.html">Get 2 free Tests!</a></button>
     </section>
     <section id="summary">
       <h1>Worried about getting into college?</h1>
@@ -57,7 +57,7 @@
       <p>
         While the ACT isn't the only qualification to get into college, it can be a big deal for getting into your dream school.
         Getting a good score is just that much less stress on your plate, and that much more assurance that you'll get into your 
-        school! But in order to do that, you need to know what you don't know. So we're offering you 3 free ACT tests to tell you 
+        school! But in order to do that, you need to know what you don't know. So we're offering you 2 free ACT tests to tell you 
         just that - where to improve.
       </p>
       <img src="Images/test-taker-girl.jpeg" alt="worried girl">
@@ -97,10 +97,10 @@
         </p>
       </div>
       <h3>
-        What are you waiting for? No paywalls and no hassle, just sign up for our free test taker today to get your 3 free ACT 
+        What are you waiting for? No paywalls and no hassle, just sign up for our free test taker today to get your 2 free ACT 
         practice tests, and find out what it's really like.
       </h3>
-      <button><a href="sign-up.html">Get 3 Free Tests</a></button>
+      <button><a href="sign-up.html">Get 2 free Tests</a></button>
     </section>
   </main>
   <section id="about">
