--- a/public/new-assignment.html
+++ b/public/new-assignment.html
@@ -49,6 +49,7 @@
       <button onclick="setManualStudent()">Submit</button>
     </details>
 
+    <a id="testTakerLink" target="_blank" style="margin-left: 2em;"></a>
     <main>
       <section id="assignment">
         <h2>Assignments</h2>
@@ -129,8 +130,7 @@
         <label for="types">Type</label>
         <select class="input" id="types">
           <option value="" disabled selected>select a type</option>
-          <option value="guarantee">Guarantee</option>
-          <option value="marketing">Marketing</option>
+          <option value="assessment">Assessment</option>
           <option value="worksheet">Worksheet</option>
           <option value="practice">Practice</option>
           <option value="daily">Daily</option>
@@ -139,7 +139,6 @@
         </select>
 
         <button class="input" onclick="setAssignment()">Submit Assignment</button>
-        <a id="testTakerLink" target="_blank"></a>
       </section>
 
       <section id="lesson">
